<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_initial"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/initial_investment_label"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/value_initial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/regular_payments_label"
            android:textAlignment="center" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/value_regular"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/value_frequency_of_deposit"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:entries="@array/frequency_of_deposit"
                android:prompt="@string/frequency_of_deposit_label" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_annual_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annual_interest_rate_label"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/value_annual_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/years_to_grow_label"
            android:textAlignment="center" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_years_to_grow"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textAlignment="center" />
            <SeekBar
                android:id="@+id/value_years_to_grow"
                android:layout_width="250dp"
                android:layout_height="match_parent" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/calculate_label" />
    </LinearLayout>
    <TextView
        android:id="@+id/txt_compound_interest"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

</LinearLayout>